--- a/src/pages/Enterprises/Service/EnterprisesService.css
+++ b/src/pages/Enterprises/Service/EnterprisesService.css
@@ -1,36 +1,93 @@
 html{
   margin: 0
 }
+
  .enterprises_service_container{
   height: 100vh;
   display: flex;
   flex-direction: column;
-  width: 900px;
+  width: 1152px;
   margin: 0 auto;
 
 }
 .enterprises_service_container .enterprises_service_inner_box{
   display: flex;
-    width: 900px;
+    width: 1152px;
     margin: 0 auto;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
+.enterprises_service_container .enterprises_service_calendar_btn{
+  margin-left: 239px;
+  margin-bottom: 30px;
+  width: 140px;
+  background-color: #ffe1e1;
+  padding: 10px;
+  border: 1px solid #ffe1e1;
+  border-radius:5px;
+  font-size: 17px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+.enterprises_service_container .enterprises_service_calendar_btn .calendar_icon{
+  
+  display: flex!important;
+  justify-content: center!important;
+  flex-direction: row!important;
+
+}
+
+
+
 .enterprises_service_container .enterprises_service_inner_box .enterprises_service_company_text{
   
-  margin: 48px 0px;
+  margin: 24px 0px;
   font-size: 30px;
   font-weight: 800;
 }
 
-
-
-.enterprises_service_container  .enterprises_button-row {
-  display: flex;
-  justify-content: space-between; /* Buttons are evenly spaced */
-  
+.enterprises_service_container .enterprises_service_inner_box .enter_logout_button{
+  font-weight: bold;
+  cursor: pointer;
+  padding: 10px;
+  background-color: rgb(212, 212, 212);
+  border-radius: 5px;
+ 
 }
+.enterprises_service_container .enterprises_outer{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 75vh;
+ 
+}
+.enterprises_service_container .enterprises_outer  .enterprises_button-row .button_container{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.enterprises_service_container .enterprises_outer  .enterprises_button-row .button_container .button_row{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  flex-direction: column;
+}
+.enterprises_service_container .enterprises_outer  .enterprises_button-row .button_container .button_row2{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  flex-direction: column;
+}
+/* 
+.enterprises_service_container .enterprises_outer  .enterprises_button-row {
+  display: flex;
+  justify-content: space-between; 
+  
+} */
 
 .enterprises_service_container  .enterprises_button {
   padding: 10px 20px; /* Add padding to style buttons */
@@ -39,26 +96,29 @@ html{
   border: none;
   cursor: pointer;
   width:  120px;
+  margin-bottom: 10px;
+  border-radius: 8px;
 }
 
-/* Responsive Styles (Optional) */
-@media (max-width: 768px) {
-  .enterprises_service_container  .enterprises_button-row {
-    flex-direction: column; /* Stack buttons vertically on smaller screens */
-  }
-}
 
 /* Style for the table */
 .enterprises_service_table_responsive {
   overflow-x: auto;
-  width: 100%;
-  margin-top: 50px;
+  width: 80%;
+  
   position: relative; 
   margin-bottom: 50px;
 }
 
 /* Style for the table header */
-.enterprises_service_table_responsive .enterprises_service_table thead {
+.enterprises_service_table_responsive .enterprises_service_table .nonsticky_table_header {
+
+  top: 0; /* Stick the header to the top of the container */
+  background-color: #fff;
+  z-index: 1; /* Ensure the header is above the content */
+}
+/* Style for the table header */
+.enterprises_service_table_responsive .enterprises_service_table .sticky_table_header {
   position: sticky;
   top: 0; /* Stick the header to the top of the container */
   background-color: #fff;
@@ -92,4 +152,198 @@ table td {
 /* Hover effect on rows */
 .enterprises_service_table_responsive table tbody tr:hover {
   background-color: #e0e0e0;
+}
+
+
+@media only screen and (max-width: 768px) and (min-width: 481px){
+  .enterprises_service_container .enterprises_service_calendar_btn{
+    margin-left: 10px!important;
+      margin-bottom: 30px;
+      width: 140px;
+      background-color: #ffe1e1;
+      padding: 10px;
+      border: 1px solid #ffe1e1;
+      border-radius: 5px;
+      align-items: center;
+    display: flex;
+    justify-content: center;
+    font-size: 17px;
+    }
+    .enterprises_service_container .enterprises_service_calendar_btn .calendar_icon{
+  
+      display: flex!important;
+  justify-content: center!important;
+  flex-direction: row!important;
+ 
+  }
+  .enterprises_service_container{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* width: 690px; */
+    /* margin: 0 auto; */
+  }
+  .enterprises_service_table_responsive {
+    overflow-x: auto;
+    /* width: 80%; */
+    
+    position: relative; 
+    margin-bottom: 50px;
+    
+  }
+  .enterprises_service_container .enterprises_service_inner_box {
+ 
+    display: flex;
+    width: 663px;
+    margin: 0;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  
+  }
+  .enterprises_service_container .enterprises_service_inner_box .enter_logout_button{
+    font-weight: bold;
+    cursor: pointer;
+    padding: 10px;
+    background-color: rgb(212, 212, 212);
+    border-radius: 8px;
+    width: 85px;
+    margin-bottom: 10px;
+  }
+  .enterprises_service_container .enterprises_outer {
+    display: flex;
+    justify-content: space-between;
+    width: 770px;
+    /* height: 100vh; */
+    flex-direction: column
+
+  }
+  .enterprises_service_container .enterprises_outer  .enterprises_button-row .button_container{
+    display: flex;
+    justify-content: center; /* Center the items horizontally */
+    flex-wrap: wrap;
+  }
+  .enterprises_service_container .enterprises_outer  .enterprises_button-row .button_container .button_row{
+    display: flex;
+
+    justify-content: space-between;
+    margin-bottom: 20px;
+    flex-direction: column;
+
+  }
+  .enterprises_service_container .enterprises_outer  .enterprises_button-row .button_container .button_row2{
+    display: flex;
+   
+    justify-content: space-between;
+    margin-bottom: 20px;
+    flex-direction: column;
+
+   }
+   .enterprises_service_table_responsive .enterprises_service_table {
+    /* width: 100%; */
+    border-collapse: collapse;
+    background-color: #fff;
+    border: 1px solid #ddd;
+}
+
+
+} 
+@media only screen and (max-width: 1068px)and (min-width: 769px) {
+  .enterprises_service_container{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    width: 853px;
+    margin: 0 auto;
+  
+  }
+  /* Style for the table */
+ .enterprises_service_table_responsive {
+   overflow-x: auto;
+   width: 80%;
+   
+   position: relative; 
+   margin-bottom: 50px;
+   height: 90vh;
+ }
+ .enterprises_service_container .enterprises_service_inner_box {
+ 
+  width: 853px;
+ 
+}
+
+.enterprises_service_container .enterprises_service_calendar_btn{
+margin-left: 224px;
+  margin-bottom: 30px;
+  width: 140px;
+  background-color: #ffe1e1;
+  padding: 10px;
+  border: 1px solid #ffe1e1;
+  border-radius: 5px;
+  align-items: center;
+    display: flex;
+    justify-content: center;
+    font-size: 17px;
+}
+.enterprises_service_container .enterprises_service_calendar_btn .calendar_icon{
+  
+  display: flex!important;
+  justify-content: center!important;
+  flex-direction: row!important;
+
+}
+
+ }
+
+
+@media only screen and (max-width: 1224px)and (min-width: 1069px) {
+  /* Style for the table */
+ .enterprises_service_table_responsive {
+   overflow-x: auto;
+   width: 80%;
+   
+   position: relative; 
+   margin-bottom: 50px;
+   height: 90vh;
+ }
+ .enterprises_service_container .enterprises_service_inner_box {
+  width: 1152px;
+ 
+}
+ }
+ @media only screen and (max-width: 1225px)and (min-width: 1791px) {
+  /* Style for the table */
+ .enterprises_service_table_responsive {
+   overflow-x: auto;
+   width: 70%;
+   
+   position: relative; 
+   margin-bottom: 50px;
+   height: 90vh;
+ }
+ }
+@media only screen and (max-width: 1792px)and (min-width: 1025px) {
+  /* Style for the table */
+ .enterprises_service_table_responsive {
+  overflow-x: auto;
+
+  position: relative;
+  margin-bottom: 50px;
+  height: 81vh;
+ }
+ }
+ 
+
+ .react-calendar {
+  width: 432px!important;
+    max-width: 100%;
+    background: white;
+    border: 1px solid #a0a096;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.125em;
+}
+
+.selected-date {
+  background-color: #007bff!important; /* Specify the background color you want */
+  color: #fff!important; /* Set the text color for better visibility */
 }
