--- a/src/pages/Enterprises/LoginPage/EnterprisesLogin.css
+++ b/src/pages/Enterprises/LoginPage/EnterprisesLogin.css
@@ -71,6 +71,16 @@ input[type="password"] {
   height: 106px;
   width: 109px;
 }
+.enterprise_login_btn:hover {
+  background-color: #007bff;
+  color: #000;
+  padding: 10px 20px;
+  border: 1px solid #007bff;
+  border-radius: 3px;
+  cursor: pointer;
+  height: 106px;
+  width: 109px;
+}
 
 .infoSection {
   /* Style for the service info section */
@@ -78,12 +88,12 @@ input[type="password"] {
 @media only screen and (max-width: 480px) and (min-width: 220px) {
   .logoSection {
     height: 174px;
-    width: 372px;
+    width: 340px;
     
   }
   .formSection {
 
-    margin: 45px 0px;
+    margin: 0px 0px;
 
   }
   .inputGroup {
@@ -93,8 +103,15 @@ input[type="password"] {
 
   }
   .enterprises_logo_wrapper >img{
-    width: 380px;
+    width: 340px;
    }
+   .inputGroup {
+  
+    width:  180px;
+
+  
+  }
+  
 } 
 @media only screen and (max-width: 768px) and (min-width: 481px){
 
