--- a/src/pages/Enterprises/Service/EnterprisesService.css
+++ b/src/pages/Enterprises/Service/EnterprisesService.css
@@ -82,12 +82,13 @@ html{
   margin-bottom: 20px;
   flex-direction: column;
 }
-/* 
+
 .enterprises_service_container .enterprises_outer  .enterprises_button-row {
   display: flex;
-  justify-content: space-between; 
+ flex-direction: column;
   
-} */
+  
+}
 
 .enterprises_service_container  .enterprises_button {
   padding: 10px 20px; /* Add padding to style buttons */
@@ -154,10 +155,82 @@ table td {
   background-color: #e0e0e0;
 }
 
+@media only screen and (max-width: 480px) and (min-width: 220px) {
+  .enterprise_parent_container{
+    height: 173vh!important
+  }
+  .enterprises_service_container .enterprises_service_inner_box {
+ 
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  
+  }
+
+  .enterprises_service_container{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  .enterprises_service_container .enterprises_service_calendar_btn{
+    margin: 0;
+    margin-bottom: 30px;
+    width: 140px;
+    background-color: #ffe1e1;
+    padding: 10px;
+    border: 1px solid #ffe1e1;
+    border-radius: 5px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    font-size: 17px;
+    margin-top: 30px;
+
+    margin-left: 27px;
+    }
+    .enterprises_service_container .enterprises_outer{
+      display: flex;
+  
+    width: 100%;
+    height: 128vh;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+     
+    }
+  }
+
+
+
+
 
 @media only screen and (max-width: 768px) and (min-width: 481px){
-  .enterprises_service_container .enterprises_service_calendar_btn{
-    margin-left: 10px!important;
+
+  .enterprises_service_container{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  /* .enterprises_service_container .enterprises_outer  .enterprises_button-row {
+    display: flex;
+    align-items: baseline;
+   
+    flex-direction: column;
+  } */
+  .enterprises_service_container .enterprises_service_inner_box {
+ 
+    display: flex;
+    flex-direction: column;
+    margin: 0px 25px;
+    width: 93%;
+  
+  }
+
+
+    .enterprises_service_container .enterprises_service_calendar_btn{
+      margin: 0;
       margin-bottom: 30px;
       width: 140px;
       background-color: #ffe1e1;
@@ -165,10 +238,14 @@ table td {
       border: 1px solid #ffe1e1;
       border-radius: 5px;
       align-items: center;
-    display: flex;
-    justify-content: center;
-    font-size: 17px;
-    }
+      display: flex;
+      justify-content: center;
+      font-size: 17px;
+      margin-top: 30px;
+  
+      margin-left: 27px;
+      }
+
     .enterprises_service_container .enterprises_service_calendar_btn .calendar_icon{
   
       display: flex!important;
@@ -176,13 +253,8 @@ table td {
   flex-direction: row!important;
  
   }
-  .enterprises_service_container{
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    /* width: 690px; */
-    /* margin: 0 auto; */
-  }
+
+
   .enterprises_service_table_responsive {
     overflow-x: auto;
     /* width: 80%; */
@@ -194,8 +266,7 @@ table td {
   .enterprises_service_container .enterprises_service_inner_box {
  
     display: flex;
-    width: 663px;
-    margin: 0;
+
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
@@ -210,13 +281,16 @@ table td {
     width: 85px;
     margin-bottom: 10px;
   }
-  .enterprises_service_container .enterprises_outer {
-    display: flex;
-    justify-content: space-between;
-    width: 770px;
-    /* height: 100vh; */
-    flex-direction: column
 
+  .enterprises_service_container .enterprises_outer{
+    display: flex;
+
+  width: 100%;
+  height: 75vh;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+   
   }
   .enterprises_service_container .enterprises_outer  .enterprises_button-row .button_container{
     display: flex;
@@ -256,6 +330,12 @@ table td {
     width: 853px;
     margin: 0 auto;
   
+  }
+  .enterprises_service_container .enterprises_outer  .enterprises_button-row {
+    display: flex;
+    align-items: baseline;
+   
+    flex-direction: column;
   }
   /* Style for the table */
  .enterprises_service_table_responsive {
