--- a/src/pages/Enterprises/Service/EnterprisesService.css
+++ b/src/pages/Enterprises/Service/EnterprisesService.css
@@ -205,6 +205,31 @@ table td {
   
       
     }
+    .enterprises_service_container .enterprises_outer  .enterprises_button-row .button_container{
+      display: flex;
+      flex-direction: row;
+      width: 75%;
+      justify-content: space-around;
+     
+      align-items: center;
+    }
+    .enterprises_service_container .enterprises_outer  .enterprises_button-row {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      justify-content: space-around;
+
+      align-items: center;
+      
+      
+    }
+    .enterprises_service_container .enterprises_outer  .enterprises_button-row .button_container .button_row2{
+      display: flex;
+     
+      margin-bottom: 20px;
+      flex-direction: column;
+  
+     }
   }
 
 
@@ -212,7 +237,40 @@ table td {
 
 
 @media only screen and (max-width: 768px) and (min-width: 481px){
+  .enterprises_service_container .enterprises_outer  .enterprises_button-row .button_container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+   
+    width: 80%;
+  }
+  .enterprises_service_container .enterprises_outer .enterprises_button-row .button_container .button_row {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    flex-direction: column;
+    align-items: center;
+}
+  .enterprises_service_container .enterprises_outer  .enterprises_button-row {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: space-around;
 
+    align-items: center;
+    
+    
+  }
+  .enterprises_service_container .enterprises_outer  .enterprises_button-row .button_container .button_row2{
+    display: flex;
+    /* width: 0%; */
+    margin-bottom: 20px;
+    flex-direction: column;
+    align-items: center;
+
+   }
   .enterprises_service_container{
     height: 100vh;
     display: flex;
@@ -298,27 +356,7 @@ table td {
   align-items: center;
    
   }
-  .enterprises_service_container .enterprises_outer  .enterprises_button-row .button_container{
-    display: flex;
-    justify-content: center; /* Center the items horizontally */
-    flex-wrap: wrap;
-  }
-  .enterprises_service_container .enterprises_outer  .enterprises_button-row .button_container .button_row{
-    display: flex;
-
-    justify-content: space-between;
-    margin-bottom: 20px;
-    flex-direction: column;
-
-  }
-  .enterprises_service_container .enterprises_outer  .enterprises_button-row .button_container .button_row2{
-    display: flex;
-   
-    justify-content: space-between;
-    margin-bottom: 20px;
-    flex-direction: column;
-
-   }
+  
    .enterprises_service_table_responsive .enterprises_service_table {
     /* width: 100%; */
     border-collapse: collapse;
@@ -383,6 +421,14 @@ margin-left: 224px;
 
 
 @media only screen and (max-width: 1224px)and (min-width: 1069px) {
+  .enterprises_service_container{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    width: 853px;
+    margin: 0 auto;
+  
+  }
   /* Style for the table */
  .enterprises_service_table_responsive {
    overflow-x: auto;
@@ -393,7 +439,8 @@ margin-left: 224px;
    height: 90vh;
  }
  .enterprises_service_container .enterprises_service_inner_box {
-  width: 1152px;
+ 
+  width: 853px;
  
 }
  }
