--- a/src/pages/News/News.css
+++ b/src/pages/News/News.css
@@ -90,7 +90,14 @@
       padding: 0 5px;
     }
   }
-
+  @media only screen and (max-width: 3000px) {
+   
+    
+    .news_content_patent{
+      padding: 20px;
+      height: 548px;
+    }
+  }
   @media only screen and (max-width: 2000px) {
     .news_slide_container {
       width: 1600px;
@@ -107,6 +114,11 @@
 
     .news_content {
       padding: 20px;
+ 
+    }
+    .news_content_patent{
+      padding: 20px;
+      height: 548px;
     }
   }
 
@@ -126,6 +138,10 @@
 
     .news_content {
       padding: 10px;
+    }
+    .news_content_patent{
+      
+      height: 527px;
     }
   }
 
@@ -147,6 +163,10 @@
       padding: 10px;
       font-size: 12px;
     }
+    .news_content_patent{
+      padding: 20px;
+      height: 527px;
+    }
   }
 
   @media only screen and (max-width: 800px) {
@@ -156,6 +176,10 @@
 
     .news_title_container {
       margin-bottom: 0px;
+    }
+    .news_content_patent{
+      padding: 20px;
+      height: 500px;
     }
   }
 
@@ -185,6 +209,10 @@
     .news_link_button {
       right: 30px;
       bottom: 10px;
+    }
+    .news_content_patent{
+      padding: 20px;
+      height: 500px!important;
     }
   }
 
